# crud-streamlit-fastapi-pydantic-sqlalchemy-docker

./: README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  requirements.txt  router.py  schemas.py
