[project]
name = "aula20-crud-completo"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Sanches",email = "sanchesmil@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
