[project]
name = "aula20-crud-completo"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Sanches",email = "sanchesmil@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
